# pchnijdolino

./: CMakeLists.txt
data/: pchnijdolino.desktop
data/icons/: icon.rc  pchnijdolino.icns  superexamples.icns
src/gamestates/: CMakeLists.txt  empty.c
src/gamestates/rust/: CMakeLists.txt
